# Gmail-personal-assistant

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: server.py
