[tool.poetry]
name = "gmail_assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = "0.3.0"}
pydantic = ">2"
langchain = "0.3.2"
langchain-community = "0.3.1"
langchain-openai = "0.2.2"

[tool.black]
target-version = ['py310','py311']
line-length = 100
include_trailing_comma = false

[tool.pylint.format]
max-line-length = 100

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

